# pymkv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IDEAS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement-request.md  feature-request.md
.github/workflows/: pypi.yml  sphinx-pr.yml
docs/source/: conf.py
pymkv/: ISO639_2.py  MKVAttachment.py  MKVFile.py  MKVTrack.py  Timestamp.py  Verifications.py  __init__.py  attachment.py  errors.py  file.py  models.py  timestamp.py  track.py  utils.py  verifications.py
tests/: conftest.py  test_mkv_attachment.py  test_mkv_file.py  test_mkv_track.py  test_run_mkv_merge.py  test_timestamp.py  test_verifications.py
tests/samples/: chapters.xml  subs.srt  tags.xml  test_audio.aac  test_sample_x264.mkv  test_with_audio.mkv  test_with_chapters.mkv  test_with_subs.mkv  test_with_tags.mkv
