[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymkv"
description = "A Python wrapper for mkvmerge. It provides support for muxing, splitting, linking, chapters, tags, and attachments through the use of mkvmerge."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Sheldon Woodward", email = "me@sheldonw.com"},
    {name = "Trenton H", email = "rda0128ou@mozmail.com"}
]
keywords = ["wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]
dependencies = [
    "bitmath",
    "iso-639"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sheldonkwoodward/pymkv"

[tool.hatch.version]
path = "pymkv/__about__.py"